--- a/client/src/components/AutoTrigger/style.css
+++ b/client/src/components/AutoTrigger/style.css
@@ -14,6 +14,8 @@
     background-color: rgba(0, 0, 0, 0.887);
     color: white;
     border-radius: 5px;
+    height: 100px;
+
 }
 .trigger-text {
     color: grey;
